"Mozilla Xprint 2004/Q3 update".  Bug 262287, patch by Julien Lafon <julien.lafon@gmail.com>, r=roland.mainz, sr=henry.jia